完成壁纸浏览页面和详情页的功能

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,6 @@
     <meta name="referrer" content="no-referrer" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <link href="//unpkg.com/progressive-image/dist/index.css" rel="stylesheet" type="text/css">
 
     <title>
         <%= htmlWebpackPlugin.options.title %>
@@ -21,5 +20,11 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
 </body>
+<style>
+    body {
+        padding: 0px;
+        margin: 0px;
+    }
+</style>
 
 </html>
