--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     </title>
     <!-- import CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/element-theme-chalk@2.15.6/lib/index.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/element-theme-chalk@2.15.6/lib/display.min.css">
     <!-- import Vue before Element -->
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <!-- import JavaScript -->
