--- a/public/index.html
+++ b/public/index.html
@@ -16,10 +16,13 @@
     <!-- import Vue before Element -->
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <!-- import JavaScript -->
-    <script src="https://cdn.jsdelivr.net/npm/element-ui@2.15.6/lib/index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/element-ui@2.15.6/lib/index.min.js"></script>
+
+
 </head>
 
 <body>
+
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
