--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,11 @@
     <script src="https://cdn.jsdelivr.net/npm/element-ui@2.15.6/lib/index.min.js"></script>
 
 
+    <!-- <script src='https://webapi.amap.com/maps?v=2.0&key=7f132515f2a650d0dcf9f7b8e5826c7e' type="text/javascript">
+    </script>
+    <script src="https://webapi.amap.com/ui/1.1/main.js"></script> -->
+
+
 </head>
 
 <body>
